# provenact-sdk

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  conformance-smoke.yml  project-sync.yml  security.yml
examples/: basic_flow.rs
src/: lib.rs
tests/: conformance_smoke.rs
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: index.ts
typescript/test/: sdk.test.ts
