[package]
name = "inactu-sdk"
version = "0.1.0-alpha.1"
edition = "2024"
license = "Apache-2.0"
description = "Rust-first SDK for Provenact verify/execute/receipt flows"
repository = "https://github.com/opertus-systems/provenact-sdk"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
sha2 = "0.10"
tempfile = "3"
